Updated index.html with new changes

--- a/index.html
+++ b/index.html
@@ -241,29 +241,29 @@
 <div class="section-content">
   <ul class="contact-info-list">
    
-     <li class="contact-info">
-    <i class="fa-solid fa-location-crosshairs"></i>
-    <p>123 Campsite Avenue,Wilderness,CA 98765</p>
-    </li>
-     <li class="contact-info">
-    <i class="fa-solid fa-location-crosshairs"></i>
-    <p>info@coffeeshopwebsite.com</p>
-    </li>
-     <li class="contact-info">
-    <i class="fa-solid fa-location-crosshairs"></i>
-    <p>(123) 456-78909</p>
-    </li>
-     <li class="contact-info">
-    <i class="fa-solid fa-location-crosshairs"></i>
-    <p>Monday - Friday: 9:00 AM - 5:00 PM</p>
+    <li class="contact-info">
+      <i class="fa-solid fa-location-dot"></i>
+      <p>123 Campsite Avenue, Wilderness, CA 98765</p>
     </li>
     <li class="contact-info">
-    <i class="fa-solid fa-location-crosshairs"></i>
-    <p>Sunday: Closed</p>
+      <i class="fa-solid fa-envelope"></i>
+      <p>info@coffeeshopwebsite.com</p>
     </li>
-     <li class="contact-info">
-    <i class="fa-solid fa-location-crosshairs"></i>
-    <p>virshaarif59@gmail.com</p>
+    <li class="contact-info">
+      <i class="fa-solid fa-phone"></i>
+      <p>(431)-134566</p>
+    </li>
+    <li class="contact-info">
+      <i class="fa-solid fa-clock"></i>
+      <p>Monday - Friday: 9:00 AM - 5:00 PM</p>
+    </li>
+    <li class="contact-info">
+      <i class="fa-solid fa-calendar-xmark"></i>
+      <p>Sunday: Closed</p>
+    </li>
+    <li class="contact-info">
+      <i class="fa-solid fa-envelope"></i>
+      <p>virshaarif59@gmail.com</p>
     </li>
   </ul>
   <form action="#" class="contact-form">
